esp32_master/build/log/idf_py_stdout_output_36691
[1/10] Performing build step for 'bootloader'
[1/1] cd /Users/xiaolei/ee459-full-throttle-bottle/esp32_master/build/bootloader/esp-idf/esptool_py && /Users/xiaolei/.espressif/python_env/idf5.4_py3.13_env/bin/python /Users/xiaolei/esp/esp-idf/components/partition_table/check_sizes.py --offset 0x8000 bootloader 0x1000 /Users/xiaolei/ee459-full-throttle-bottle/esp32_master/build/bootloader/bootloader.bin
Bootloader binary size 0x6580 bytes. 0xa80 bytes (9%) free.
[2/10] No install step for 'bootloader'
[3/10] Completed 'bootloader'
[4/10] Building C object esp-idf/main/CMakeFiles/__idf_main.dir/esp32_master.c.obj
FAILED: esp-idf/main/CMakeFiles/__idf_main.dir/esp32_master.c.obj 
/Users/xiaolei/.espressif/tools/xtensa-esp-elf/esp-14.2.0_20241119/xtensa-esp-elf/bin/xtensa-esp32-elf-gcc -DESP_PLATFORM -DIDF_VER=\"v5.4.1\" -DSOC_MMU_PAGE_SIZE=CONFIG_MMU_PAGE_SIZE -DSOC_XTAL_FREQ_MHZ=CONFIG_XTAL_FREQ -D_GLIBCXX_HAVE_POSIX_SEMAPHORE -D_GLIBCXX_USE_POSIX_SEMAPHORE -D_GNU_SOURCE -D_POSIX_READER_WRITER_LOCKS -I/Users/xiaolei/ee459-full-throttle-bottle/esp32_master/build/config -I/Users/xiaolei/ee459-full-throttle-bottle/esp32_master/main -I/Users/xiaolei/esp/esp-idf/components/newlib/platform_include -I/Users/xiaolei/esp/esp-idf/components/freertos/config/include -I/Users/xiaolei/esp/esp-idf/components/freertos/config/include/freertos -I/Users/xiaolei/esp/esp-idf/components/freertos/config/xtensa/include -I/Users/xiaolei/esp/esp-idf/components/freertos/FreeRTOS-Kernel/include -I/Users/xiaolei/esp/esp-idf/components/freertos/FreeRTOS-Kernel/portable/xtensa/include -I/Users/xiaolei/esp/esp-idf/components/freertos/FreeRTOS-Kernel/portable/xtensa/include/freertos -I/Users/xiaolei/esp/esp-idf/components/freertos/esp_additions/include -I/Users/xiaolei/esp/esp-idf/components/esp_hw_support/include -I/Users/xiaolei/esp/esp-idf/components/esp_hw_support/include/soc -I/Users/xiaolei/esp/esp-idf/components/esp_hw_support/include/soc/esp32 -I/Users/xiaolei/esp/esp-idf/components/esp_hw_support/dma/include -I/Users/xiaolei/esp/esp-idf/components/esp_hw_support/ldo/include -I/Users/xiaolei/esp/esp-idf/components/esp_hw_support/debug_probe/include -I/Users/xiaolei/esp/esp-idf/components/esp_hw_support/port/esp32/. -I/Users/xiaolei/esp/esp-idf/components/esp_hw_support/port/esp32/include -I/Users/xiaolei/esp/esp-idf/components/heap/include -I/Users/xiaolei/esp/esp-idf/components/heap/tlsf -I/Users/xiaolei/esp/esp-idf/components/log/include -I/Users/xiaolei/esp/esp-idf/components/soc/include -I/Users/xiaolei/esp/esp-idf/components/soc/esp32 -I/Users/xiaolei/esp/esp-idf/components/soc/esp32/include -I/Users/xiaolei/esp/esp-idf/components/soc/esp32/register -I/Users/xiaolei/esp/esp-idf/components/hal/platform_port/include -I/Users/xiaolei/esp/esp-idf/components/hal/esp32/include -I/Users/xiaolei/esp/esp-idf/components/hal/include -I/Users/xiaolei/esp/esp-idf/components/esp_rom/include -I/Users/xiaolei/esp/esp-idf/components/esp_rom/esp32/include -I/Users/xiaolei/esp/esp-idf/components/esp_rom/esp32/include/esp32 -I/Users/xiaolei/esp/esp-idf/components/esp_rom/esp32 -I/Users/xiaolei/esp/esp-idf/components/esp_common/include -I/Users/xiaolei/esp/esp-idf/components/esp_system/include -I/Users/xiaolei/esp/esp-idf/components/esp_system/port/soc -I/Users/xiaolei/esp/esp-idf/components/esp_system/port/include/private -I/Users/xiaolei/esp/esp-idf/components/xtensa/esp32/include -I/Users/xiaolei/esp/esp-idf/components/xtensa/include -I/Users/xiaolei/esp/esp-idf/components/xtensa/deprecated_include -I/Users/xiaolei/esp/esp-idf/components/lwip/include -I/Users/xiaolei/esp/esp-idf/components/lwip/include/apps -I/Users/xiaolei/esp/esp-idf/components/lwip/include/apps/sntp -I/Users/xiaolei/esp/esp-idf/components/lwip/lwip/src/include -I/Users/xiaolei/esp/esp-idf/components/lwip/port/include -I/Users/xiaolei/esp/esp-idf/components/lwip/port/freertos/include -I/Users/xiaolei/esp/esp-idf/components/lwip/port/esp32xx/include -I/Users/xiaolei/esp/esp-idf/components/lwip/port/esp32xx/include/arch -I/Users/xiaolei/esp/esp-idf/components/lwip/port/esp32xx/include/sys -I/Users/xiaolei/esp/esp-idf/components/nvs_flash/include -I/Users/xiaolei/esp/esp-idf/components/esp_partition/include -I/Users/xiaolei/esp/esp-idf/components/esp_event/include -I/Users/xiaolei/esp/esp-idf/components/esp_netif/include -I/Users/xiaolei/esp/esp-idf/components/esp_wifi/include -I/Users/xiaolei/esp/esp-idf/components/esp_wifi/include/local -I/Users/xiaolei/esp/esp-idf/components/esp_wifi/wifi_apps/include -I/Users/xiaolei/esp/esp-idf/components/esp_wifi/wifi_apps/nan_app/include -I/Users/xiaolei/esp/esp-idf/components/esp_phy/include -I/Users/xiaolei/esp/esp-idf/components/esp_phy/esp32/include -I/Users/xiaolei/esp/esp-idf/components/driver/deprecated -I/Users/xiaolei/esp/esp-idf/components/driver/i2c/include -I/Users/xiaolei/esp/esp-idf/components/driver/touch_sensor/include -I/Users/xiaolei/esp/esp-idf/components/driver/twai/include -I/Users/xiaolei/esp/esp-idf/components/driver/touch_sensor/esp32/include -I/Users/xiaolei/esp/esp-idf/components/esp_pm/include -I/Users/xiaolei/esp/esp-idf/components/esp_ringbuf/include -I/Users/xiaolei/esp/esp-idf/components/esp_driver_gpio/include -I/Users/xiaolei/esp/esp-idf/components/esp_driver_pcnt/include -I/Users/xiaolei/esp/esp-idf/components/esp_driver_gptimer/include -I/Users/xiaolei/esp/esp-idf/components/esp_driver_spi/include -I/Users/xiaolei/esp/esp-idf/components/esp_driver_mcpwm/include -I/Users/xiaolei/esp/esp-idf/components/esp_driver_ana_cmpr/include -I/Users/xiaolei/esp/esp-idf/components/esp_driver_i2s/include -I/Users/xiaolei/esp/esp-idf/components/esp_driver_sdmmc/include -I/Users/xiaolei/esp/esp-idf/components/sdmmc/include -I/Users/xiaolei/esp/esp-idf/components/esp_driver_sdspi/include -I/Users/xiaolei/esp/esp-idf/components/esp_driver_sdio/include -I/Users/xiaolei/esp/esp-idf/components/esp_driver_dac/include -I/Users/xiaolei/esp/esp-idf/components/esp_driver_rmt/include -I/Users/xiaolei/esp/esp-idf/components/esp_driver_tsens/include -I/Users/xiaolei/esp/esp-idf/components/esp_driver_sdm/include -I/Users/xiaolei/esp/esp-idf/components/esp_driver_i2c/include -I/Users/xiaolei/esp/esp-idf/components/esp_driver_uart/include -I/Users/xiaolei/esp/esp-idf/components/vfs/include -I/Users/xiaolei/esp/esp-idf/components/esp_driver_ledc/include -I/Users/xiaolei/esp/esp-idf/components/esp_driver_parlio/include -I/Users/xiaolei/esp/esp-idf/components/esp_driver_usb_serial_jtag/include -I/Users/xiaolei/esp/esp-idf/components/esp_http_server/include -I/Users/xiaolei/esp/esp-idf/components/http_parser -mlongcalls -Wno-frame-address  -fno-builtin-memcpy -fno-builtin-memset -fno-builtin-bzero -fno-builtin-stpcpy -fno-builtin-strncpy -fdiagnostics-color=always -ffunction-sections -fdata-sections -Wall -Werror=all -Wno-error=unused-function -Wno-error=unused-variable -Wno-error=unused-but-set-variable -Wno-error=deprecated-declarations -Wextra -Wno-error=extra -Wno-unused-parameter -Wno-sign-compare -Wno-enum-conversion -gdwarf-4 -ggdb -Og -fno-shrink-wrap -fmacro-prefix-map=/Users/xiaolei/ee459-full-throttle-bottle/esp32_master=. -fmacro-prefix-map=/Users/xiaolei/esp/esp-idf=/IDF -fstrict-volatile-bitfields -fno-jump-tables -fno-tree-switch-conversion -std=gnu17 -Wno-old-style-declaration -MD -MT esp-idf/main/CMakeFiles/__idf_main.dir/esp32_master.c.obj -MF esp-idf/main/CMakeFiles/__idf_main.dir/esp32_master.c.obj.d -o esp-idf/main/CMakeFiles/__idf_main.dir/esp32_master.c.obj -c /Users/xiaolei/ee459-full-throttle-bottle/esp32_master/main/esp32_master.c
/Users/xiaolei/ee459-full-throttle-bottle/esp32_master/main/esp32_master.c: In function 'root_get_handler':
/Users/xiaolei/ee459-full-throttle-bottle/esp32_master/main/esp32_master.c:405:9: warning: missing terminating " character
  405 |         "let currentSetpoint = -1; // Track the current setpoint globally in JS
      |         ^
/Users/xiaolei/ee459-full-throttle-bottle/esp32_master/main/esp32_master.c:405:9: error: missing terminating " character
  405 |         "let currentSetpoint = -1; // Track the current setpoint globally in JS
      |         ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/Users/xiaolei/ee459-full-throttle-bottle/esp32_master/main/esp32_master.c:443:9: warning: missing terminating " character
  443 |         "    // Get the temperature value from the button's onclick attribute (a bit hacky but works)
      |         ^
/Users/xiaolei/ee459-full-throttle-bottle/esp32_master/main/esp32_master.c:443:9: error: missing terminating " character
  443 |         "    // Get the temperature value from the button's onclick attribute (a bit hacky but works)
      |         ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/Users/xiaolei/ee459-full-throttle-bottle/esp32_master/main/esp32_master.c:445:9: warning: missing terminating " character
  445 |         "    const tempValue = parseInt(onclickAttr.match(/\\d+/)[0]); // Extract number
      |         ^
/Users/xiaolei/ee459-full-throttle-bottle/esp32_master/main/esp32_master.c:445:9: error: missing terminating " character
  445 |         "    const tempValue = parseInt(onclickAttr.match(/\\d+/)[0]); // Extract number
      |         ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
ninja: build stopped: subcommand failed.
